metaタグを追加

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	gtag('config', 'UA-121609123-1');
 	</script>
   <title>Code of Conduct - FOSS4G TOKAI</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>  
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="description" content="">
 </head>
 
 <body>
