文書を構造化した

--- a/index.html
+++ b/index.html
@@ -14,112 +14,90 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>  
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-<pre>
-はじめに
+<div class="container">
+<h1>Code of Conduct</h1>
+<h2>はじめに</h2>
 
-FOSS4G TOKAIでは、皆様に心地よく、そして楽しく参加していただけるよう、行動規範(以降「本規範」)を設けています。
+<p>FOSS4G TOKAIでは、皆様に心地よく、そして楽しく参加していただけるよう、行動規範(以降「本規範」)を設けています。</p>
 
-これは、ソフトウェアの自由、コミュニティの自由、そして皆さんの活動と言論の自由を守るために、大切なことです。
+<p>これは、ソフトウェアの自由、コミュニティの自由、そして皆さんの活動と言論の自由を守るために、大切なことです。</p>
 
-皆さんがFOSS4G TOKAIのイベント内で、あるいは外でFOSS4G TOKAIの一員として行動や言論をおこなうとき、その言動がこの本規範を外れるものでないかを考えるようにしてください。
+<p>皆さんがFOSS4G TOKAIのイベント内で、あるいは外でFOSS4G TOKAIの一員として行動や言論をおこなうとき、本規範を外れるものでないかを考えるようにしてください。</p>
 
-私たちは、本この規範が皆さんの思う「よりよいオープンソース・コミュニティ」の在り方と合致していればとてもうれしく思います。
+<p>私たちは、本規範が皆さんの思う「よりよいオープンソース・コミュニティ」の在り方と合致していればとてもうれしく思います。</p>
 
-FOSS4G TOKAI 行動規範 Ver.1.0 - 2018年76月
+<p>FOSS4G TOKAI 行動規範 Ver.1.0 - 2018年7月</p>
 
-多様性のために
+<h2>多様性のために</h2>
 
-他者を尊重してください。思いやりを持ってください。
+<p>他者を尊重してください。思いやりを持ってください。
+  
+  </p>
+<p>FOSS4G TOKAIは、Free &amp; Open-Source Softwareのためのコミュニティであり、それを利用・検討・開発したりするさまざまな立場の人のために開かれた場であらねばなりません。
+  
+  </p>
+<p>私たちは、自認や外形を含む性別、年齢、性的指向、障害や身体的特徴、人種・民族・国籍・言語や地域性、職業や経歴、宗教や思想や文化・ライフスタイル、技術力や技術の選択・手法などのさまざまな個人のありかたに対して、ハラスメントを許容しません。
+  
+  私たちは、コミュニティメンバー及びイベント参加者に対する、いかなる種類のハラスメントも容認しません。  </p>
+<p>イベント内での言動にとどまらず、SNSやブログなどのオンラインメディアや、外部での発言においても、FOSS4G TOKAIに関わるものとして発言する限り、これを控えてください。  </p>
+<p>私たちはこれらの規則を破った参加者に対し、委員会の決定のもと、有償であっても払い戻しなく退出を求め、今後ともに参加を拒絶することがあります。また、場合によっては事態の収拾のために当該参加者に法的責任を問うことも辞しません。</p>
+<p> 本この行動規範を守る限り、私たちは皆さんの参加を歓迎し、奨励します。</p>
+<p> 私たちは、皆さんが参加したいと感じられるコミュニティでありたいと考えています。  </p>
+<p>皆さまが前述のいかなる特徴を持っているとしても、また、いかなる思想や信条を持っているとしても、私たちは皆さんを歓迎します。  </p>
+<p>私たちには思想と信条の自由があります。
+  
+  人を傷つけない限り、私たちはそれを決して冒しません。 </p>
+<h2>自由のために</h2>
 
-FOSS4G TOKAIは、Free & Open-Source Softwareのためのコミュニティであり、それを利用・検討・開発したりするさまざまな立場の人のために開かれた場であらねばなりません。
+<p>私たちは、いかなる技術力の人も、技術的思想や立場の人も、コミュニティに参加することを拒みません。 </p>
+<p> 機密性や法的問題があると思われる以外の全てにおいて、コミュニティ内で活発に議論共有され、オープンな形で共有されることが望ましいと考えています。</p>
+<p> 問題を共有する人に優しくしてください。
+  
+  人の技術的好奇心を否定しないでください。</p>
+<p> 技術的な間違いに対して優しく協力してください。  </p>
+<p>その指摘が技術的なものである限り、優しく受け入れてください。</p>
+<p> 共感的に、歓迎的に、協力的に、友好的に、そして忍耐を持ってください。</p>
+<p> 皆さんの友好的であろうとする努力に感謝します。 </p>
+<h2>健全性のために</h2>
 
-私たちは、自認や外形を含む性別、年齢、性的指向、障害や身体的特徴、人種・民族・国籍・言語や地域性、職業や経歴、宗教や思想や文化・ライフスタイル、技術力や技術の選択・手法などのさまざまな個人のありかたに対して、ハラスメントを許容しません。
+<p>私たちは、皆さんと有意義な時間を過ごせることをとても嬉しく思います。 </p>
+<p> そのために、以下の行動やそれに類することが発生した場合、私たちは当該参加者を排除し、場合によっては法的措置もとらなければならなくなります。  </p>
+<ul>
+  <li>侮辱や差別的なジョークを含む言動
+    不快なコメントや、文脈上不必要に冒涜的な批判</li>
+  <li> 脅迫や暴力性などの脅威を感じる要求
+    セッションやイベントの継続を不必要に妨げる行為  </li>
+  <li>ストーカーや嫌がらせ、セッション外での許可を取らない撮影や録音</li>
+  <li> 周囲を不快にさせる故意または回避可能な身体接触
+    誰かの制止に従わず繰り返す望まれない行為</li>
+  <li> 個人情報や機密情報、許可を取らない非公開のやりとりの公開  </li>
+  <li>これらに対し支援を行ったり称賛するような言動</li>
+</ul>
+<p> 私たちは皆さんのコミュニケーションに水を差すことをしたくありません。 </p>
+<p>良識的に行動してください。 </p>
+<h2>皆さんとともに</h2>
 
-私たちは、コミュニティメンバー及びイベント参加者に対する、いかなる種類のハラスメントも容認しません。
-
-イベント内での言動にとどまらず、SNSやブログなどのオンラインメディアや、外部での発言においても、FOSS4G TOKAIに関わるものとして発言する限り、これを控えてください。
-
-私たちはこれらの規則を破った参加者に対し、委員会の決定のもと、有償であっても払い戻しなく退出を求め、今後ともに参加を拒絶することがあります。また、場合によっては事態の収拾のために当該参加者に法的責任を問うことも辞しません。
-
-本この行動規範を守る限り、私たちは皆さんの参加を歓迎し、奨励します。
-
-私たちは、皆さんが参加したいと感じられるコミュニティでありたいと考えています。
-
-皆さまが前述のいかなる特徴を持っているとしても、また、いかなる思想や信条を持っているとしても、私たちは皆さんを歓迎します。
-
-私たちには思想と信条の自由があります。
-
-人を傷つけない限り、私たちはそれを決して冒しません。
-
-自由のために
-
-私たちは、いかなる技術力の人も、技術的思想や立場の人も、コミュニティに参加することを拒みません。
-
-機密性や法的問題があると思われる以外の全てにおいて、コミュニティ内で活発に議論共有され、オープンな形で共有されることが望ましいと考えています。
-
-問題を共有する人に優しくしてください。
-
-人の技術的好奇心を否定しないでください。
-
-技術的な間違いに対して優しく協力してください。
-
-その指摘が技術的なものである限り、優しく受け入れてください。
-
-共感的に、歓迎的に、協力的に、友好的に、そして忍耐を持ってください。
-
-皆さんの友好的であろうとする努力に感謝します。
-
-健全性のために
-
-私たちは、皆さんと有意義な時間を過ごせることをとても嬉しく思います。
-
-そのために、以下の行動やそれに類することが発生した場合、私たちは当該参加者を排除し、場合によっては法的措置もとらなければならなくなります。
-
-侮辱や差別的なジョークを含む言動
-不快なコメントや、文脈上不必要に冒涜的な批判
-脅迫や暴力性などの脅威を感じる要求
-セッションやイベントの継続を不必要に妨げる行為
-ストーカーや嫌がらせ、セッション外での許可を取らない撮影や録音
-周囲を不快にさせる故意または回避可能な身体接触
-誰かの制止に従わず繰り返す望まれない行為
-個人情報や機密情報、許可を取らない非公開のやりとりの公開
-これらに対し支援を行ったり称賛するような言動
-
-私たちは皆さんのコミュニケーションに水を差すことをしたくありません。
-
-良識的に行動してください。
-
-皆さんとともに
-
-誰かが本この行動規範を破っていると思われる場合は、スタッフの誰かに報告・相談してください。
-
-自制を求められそうなら、その人に本この行動規範を示し、自制を促してください。
-
-誰しも、自分の言動に自覚的ではないときがあり、スタッフも当事者彼の行動に気付けないときがあります。
-
-気付いたことは、遠慮なくスタッフに報告したり、イベントアンケートに記入してください。
-
-私たちは皆さんとともによりよいコミュニティを作っていきます。
-
-皆さんのご協力に感謝します。
-
-FOSS4G TOKAI 実行委員会
-
-本規範は「FOSS4G Hokkaido行動規範Ver.1.0 2018年6月」を基に変更して作成しました。
-
-FOSS4G TOKAI 行動規範 Ver.1.0 - 2018年7月
-https://foss4g.hokkaido.jp/code-of-conduct/index.html
-
-本この行動規範も上記規範と同様にCC BY 4.0で公開されています。
-https://creativecommons.org/licenses/by/4.0/deed.ja
-
-あなたの団体のオープンな行動規範の叩き台となれば幸いです。
-
-OSGeo財団の行動規範はこちらを参照してください。 
-https://www.osgeo.org/code_of_conduct/
-</pre>
+<p>誰かが本規範を破っていると思われる場合は、スタッフの誰かに報告・相談してください。</p>
+<p> 自制を求められそうなら、その人に本規範を示し、自制を促してください。</p>
+<p> 誰しも、自分の言動に自覚的ではないときがあり、スタッフも当事者の行動に気付けないときがあります。</p>
+<p> 気付いたことは、遠慮なくスタッフに報告したり、イベントアンケートに記入してください。</p>
+<p> 私たちは皆さんとともによりよいコミュニティを作っていきます。</p>
+<p> 皆さんのご協力に感謝します。</p>
+<p> FOSS4G TOKAI 実行委員会</p>
+<p> 本規範は「FOSS4G Hokkaido行動規範Ver.1.0 2018年6月」を基に変更して作成しました。 </p>
+<p> FOSS4G TOKAI 行動規範 Ver.1.0 - 2018年7月</p>
+<p> https://foss4g.hokkaido.jp/code-of-conduct/index.html</p>
+<p> 本規範も上記規範と同様にCC BY 4.0で公開されています。</p>
+<p> https://creativecommons.org/licenses/by/4.0/deed.ja</p>
+<p> あなたの団体のオープンな行動規範の叩き台となれば幸いです。</p>
+<p> OSGeo財団の行動規範はこちらを参照してください。</p>
+<p> https://www.osgeo.org/code_of_conduct/ </p>
+</div>
 </body>
 </html>
