スタイルを調整

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
   <meta name="description" content="">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
 <div class="container">
 <h1>Code of Conduct</h1>
+<p>FOSS4G TOKAI: 行動規範</p>
 <h2>はじめに</h2>
 
 <p>FOSS4G TOKAIでは、皆様に心地よく、そして楽しく参加していただけるよう、行動規範(以降「本規範」)を設けています。</p>
@@ -31,8 +32,6 @@
 <p>皆さんがFOSS4G TOKAIのイベント内で、あるいは外でFOSS4G TOKAIの一員として行動や言論をおこなうとき、本規範を外れるものでないかを考えるようにしてください。</p>
 
 <p>私たちは、本規範が皆さんの思う「よりよいオープンソース・コミュニティ」の在り方と合致していればとてもうれしく思います。</p>
-
-<p>FOSS4G TOKAI 行動規範 Ver.1.0 - 2018年7月</p>
 
 <h2>多様性のために</h2>
 
@@ -90,6 +89,7 @@
 <p> 私たちは皆さんとともによりよいコミュニティを作っていきます。</p>
 <p> 皆さんのご協力に感謝します。</p>
 <p> FOSS4G TOKAI 実行委員会</p>
+<h2>本規範について</h2>
 <p> 本規範は「FOSS4G Hokkaido行動規範Ver.1.0 2018年6月」を基に変更して作成しました。 </p>
 <p> FOSS4G TOKAI 行動規範 Ver.1.0 - 2018年7月</p>
 <p> https://foss4g.hokkaido.jp/code-of-conduct/index.html</p>
@@ -98,6 +98,7 @@
 <p> あなたの団体のオープンな行動規範の叩き台となれば幸いです。</p>
 <p> OSGeo財団の行動規範はこちらを参照してください。</p>
 <p> https://www.osgeo.org/code_of_conduct/ </p>
+<header><p>Copyright © FOSS4G Hokkaido.</p></header>
 </div>
 </body>
 </html>
