--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
 <p> 気付いたことは、遠慮なくスタッフに報告したり、イベントアンケートに記入してください。</p>
 <p> 私たちは皆さんとともによりよいコミュニティを作っていきます。</p>
 <p> 皆さんのご協力に感謝します。</p>
-<p> FOSS4G TOKAI 実行委員会</p>
+<p class="text-right"> FOSS4G TOKAI 実行委員会</p>
 <h2>本規範について</h2>
 <p> 本規範は「FOSS4G Hokkaido行動規範Ver.1.0 2018年6月」を基に変更して作成しました。 </p>
 <p> FOSS4G TOKAI 行動規範 Ver.1.0 - 2018年7月</p>
-<p> https://foss4g.hokkaido.jp/code-of-conduct/index.html</p>
+<p> <a href="https://foss4g.hokkaido.jp/code-of-conduct/index.html">https://foss4g.hokkaido.jp/code-of-conduct/index.html</a></p>
 <p> 本規範も上記規範と同様にCC BY 4.0で公開されています。</p>
-<p> https://creativecommons.org/licenses/by/4.0/deed.ja</p>
+<p> <a href="https://creativecommons.org/licenses/by/4.0/deed.ja">https://creativecommons.org/licenses/by/4.0/deed.ja</a></p>
 <p> あなたの団体のオープンな行動規範の叩き台となれば幸いです。</p>
 <p> OSGeo財団の行動規範はこちらを参照してください。</p>
-<p> https://www.osgeo.org/code_of_conduct/ </p>
+<p> <a href="https://www.osgeo.org/code_of_conduct/">https://www.osgeo.org/code_of_conduct/</a> </p>
 <header><p>Copyright © FOSS4G Hokkaido.</p></header>
 </div>
 </body>
