レイアウトを調整

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <p> あなたの団体のオープンな行動規範の叩き台となれば幸いです。</p>
 <p> OSGeo財団の行動規範はこちらを参照してください。</p>
 <p> <a href="https://www.osgeo.org/code_of_conduct/">https://www.osgeo.org/code_of_conduct/</a> </p>
-<header><p>Copyright © FOSS4G Hokkaido.</p></header>
+<header><p class="text-right">Copyright © FOSS4G Hokkaido.</p></header>
 </div>
 </body>
 </html>
