誤記を修正

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <p class="text-right"> FOSS4G TOKAI 実行委員会</p>
 <h2>本規範について</h2>
 <p> 本規範は「FOSS4G Hokkaido行動規範Ver.1.0 2018年6月」を基に変更して作成しました。 </p>
-<p> FOSS4G TOKAI 行動規範 Ver.1.0 - 2018年7月</p>
+<p> FOSS4G Hokkaido 行動規範 Ver.1.0 - 2018年6月</p>
 <p> <a href="https://foss4g.hokkaido.jp/code-of-conduct/index.html">https://foss4g.hokkaido.jp/code-of-conduct/index.html</a></p>
 <p> 本規範も上記規範と同様にCC BY 4.0で公開されています。</p>
 <p> <a href="https://creativecommons.org/licenses/by/4.0/deed.ja">https://creativecommons.org/licenses/by/4.0/deed.ja</a></p>
