イベントページへのリンクを追加

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 <p> あなたの団体のオープンな行動規範の叩き台となれば幸いです。</p>
 <p> OSGeo財団の行動規範はこちらを参照してください。</p>
 <p> <a href="https://www.osgeo.org/code_of_conduct/">https://www.osgeo.org/code_of_conduct/</a> </p>
+<p class="text-center"><a href="/2018/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">イベントページに戻る</a></p>
 <header><p class="text-right">Copyright © FOSS4G TOKAI.</p></header>
 </div>
 </body>
